--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="images/logo.jpg" alt="TechnoSoft Logo">
+        <img class="logo img-responsive" src="images/logo.jpg" alt="TechnoSoft Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -71,10 +71,10 @@
 
     <h4>Business Value</h4><br>
     <ul>
-      <li>IT enabled achievement of strategic objectives</li>
-      <li>Speedier time to market</li>
-      <li>Improvements in cost and energy efficiency</li>
-      <li>Increased productivity</li>
+      <li><p>IT enabled achievement of strategic objectives</p></li>
+      <li><p>Speedier time to market</p></li>
+      <li><p>Improvements in cost and energy efficiency</p></li>
+      <li><p>Increased productivity</p></li>
     </ul>
 
 
@@ -142,12 +142,15 @@
       In today’s pace-setting executives understand the importance of giving their company a competitive advantage through stellar HR processes and services. With Technosoft Services, companies outsource their core HR processes and enjoy a
       comprehensive set of services typically reserved for larger organizations.</p><br>
     <p>These end-to-end services include:</p>
+
     <ul>
-      <li><a href="https://www.trinet.com/hr-services/payroll">Payroll: </a>Complete payroll services and tax administration in all 50 states</li>
-      <li><a href="https://www.trinet.com/services/core/benefits.htm">Benefits: </a>Comprehensive employee benefits packages</li>
-      <li><a href="https://www.trinet.com/services/core/risk.htm">Risk & Compliance: </a>Crucial assistance with employer-related risk and compliance</li>
-      <li><a href="https://www.trinet.com/hr-services">HR Team: </a>A dedicated team delivering best practices guidance and expertise</li>
-    </ul><br><br>
+      <li><p><a href="https://www.trinet.com/hr-services/payroll">Payroll: </a>Complete payroll services and tax administration in all 50 states</p></li>
+      <li><p><a href="https://www.trinet.com/services/core/benefits.htm">Benefits: </a>Comprehensive employee benefits packages</p></li>
+      <li><p><a href="https://www.trinet.com/services/core/risk.htm">Risk & Compliance: </a>Crucial assistance with employer-related risk and compliance</p></li>
+      <li><p><a href="https://www.trinet.com/hr-services">HR Team: </a>A dedicated team delivering best practices guidance and expertise</p></li>
+    </ul>
+
+    <br><br>
 
     <h4>HR Team :</h4><br>
     <p><b>The Industry Standard for Expert HR Support</b>
@@ -158,10 +161,10 @@
 
     <p><b>Technosoft’s HR Teams Ensure:</b><br>
     <ul>
-      <li>Direct support from a Technosoft specialist for all your employees so they receive appropriate attention when they need it</li>
-      <li>Day-to-day support for benefit and payroll issues</li>
-      <li>Rapid resolution to common HR challenges</li>
-      <li>Best practices guidance and expertise to address complex issues such as compliance, pre-employment screening, termination procedures, safety plans, and employee record management.</li>
+      <li><p>Direct support from a Technosoft specialist for all your employees so they receive appropriate attention when they need it</p></li>
+      <li><p>Day-to-day support for benefit and payroll issues</p></li>
+      <li><p>Rapid resolution to common HR challenges</p></li>
+      <li><p>Best practices guidance and expertise to address complex issues such as compliance, pre-employment screening, termination procedures, safety plans, and employee record management.</p></li>
     </ul><br><br>
     </p>
 
